# ds-weather-forecast

./: Dockerfile  README.md  pyproject.toml  weather_forecast.ipynb
weather_forecast/: dir_encoder.pkl  main.py  standard_scaler.pkl  weather_forecast.ipynb
